<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/redb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/redb"
        android:textSize="20sp"
        android:background="#F44336"
        android:onClick="redBClick"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/yellowb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/yellowb"
        android:textSize="20sp"
        android:background="#FFEB3B"
        android:onClick="yellowBClick"/>

    <Button
        android:id="@+id/goalb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/goalb"
        android:textSize="20sp"
        android:background="#8BC34A"
        android:onClick="goalBClick"/>

</LinearLayout>